Update Product Name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Documentation page information
-site_name: SparkFun Soft Power Switch Mk2 USB-C Hookup Guide
-site_description: A hookup guide for the SparkFun Soft Power Switch Mk2 USB-C.
+site_name: SparkFun Soft Power Switch - USB-C Hookup Guide
+site_description: A hookup guide for the SparkFun Soft Power Switch - USB-C.
 site_url: https://sparkfun.github.io/SparkFun_Soft_Power_Switch_USB-C
 site_author: SparkFun Electronics
 
